syntax = "proto3";
import "google/protobuf/empty.proto";
option java_package = "code.showme.pinecone.cdp.artifact";

service JavaArtifact {
  rpc push ( JavaArtifactRequest) returns (JavaArtifactReply) {}
}

message JavaArtifactRequest {
  string name = 1;
  string artifactVersion = 2;
  int32  buildNumber = 3;
  string pipelineHistoryUrl = 4;
  string pipelineHistoryId = 5;
  string appId = 6;
  string namespace = 7;

  string repoId = 12;
  string groupId = 13;
  string artifactId = 14;
  string javaArtifactVersion = 15;
}

message JavaArtifactReply {
  bool received = 1;
}